adiciona mais estilos

--- a/01-css-inline.html
+++ b/01-css-inline.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <h1 style="color: blue; font-size: 40px; color: deeppink; color: purple">O que é CSS</h1>
+    <h1 style="color: blue; font-size: 40px; color: deeppink; color: purple;">O que é CSS</h1>
     <p style="color: coral;">CSS significa Cascading Style Sheets(ou Folhas de Estilo em Cascata).</p>
 
     <p>É uma linguagem de estilização usada para:</p>
@@ -19,8 +19,8 @@
       <li>
         Posicionar elementos na tela
         <ul>
-          <li>Menus</li>
-          <li>Botões</li>
+          <li style="background-color: lightslategrey;">Menus</li>
+          <li style="background-color: lightslategrey;">Botões</li>
           <li>Imagens</li>
         </ul>
       </li>
